--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,12 @@
-<html>
+{% extends 'blog/base.html' %} {% block content %} {% for post in posts %}
+<div class="post">
 
-<head>
-    <title>Django blog</title>
-</head>
-
-<body>
-    <div>
-        <h1>
-            <a href="">Django Blog</a>
-        </h1>
-    </div>
-    {% for post in posts %}
-    <div>
+    <h1>
+        <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
+    </h1>
+    <p>{{ post.text|linebreaksbr }}</p>
+    <div class="date">
         <p>published: {{ post.published_date }}</p>
-        <h1>
-            <a href="">{{ post.title }}</a>
-        </h1>
-        <p>{{ post.text|linebreaksbr }}</p>
     </div>
-    {% endfor %}
-</body>
-
-</html>
+</div>
+{% endfor %} {% endblock %}
